# ikacut

./: .gitignore  README.md  ikacut.sh  pyproject.toml
ikacut/: __main__.py  exceptions.py
ikacut/commands/: __init__.py  death.py  download.py  match.py  snapshot.py
ikacut/core/: cli.py
ikacut/services/: caputure.py
