[tool.poetry]
name = "ika-tools"
version = "0.1.0"
description = ""
authors = ["hrkh <hrkhjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
opencv-contrib-python = "^4.5.5"
yt-dlp = "^2022.5.18"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
